--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -60,10 +60,15 @@ body {
     height: 100%;
 
     &.nav-menu {
+      transition: 0.8s ease-in-out;
       li {
         font-size: 16px;
         font-weight: 500;
         text-transform: uppercase;
+        position: relative;
+        height: 100%;
+        display: flex;
+        align-items: center;
 
         &:not(:first-child) {
           margin-left: 25px;
@@ -78,6 +83,41 @@ body {
             text-decoration: none;
             color: #02aeae;
           }
+        }
+
+        &.hide-menu:hover .nav-menu__sub-menu {
+          display: flex;
+        }
+      }
+
+      &__sub-menu {
+        display: none;
+        position: absolute;
+        flex-direction: column;
+        align-items: flex-start;
+        background: #fff;
+        top: 60px;
+        left: -50%;
+        height: auto;
+        padding: 15px 10px;
+        box-shadow: 0 0 20px 5px #00000030;
+        border-radius: 5px;
+        transition: all 2s;
+
+        .nav-menu__sub-menu-item {
+          margin-left: 0 !important;
+          font-size: 16px;
+          text-transform: capitalize;
+
+          &:nth-child(1) {
+            margin-bottom: 8px;
+
+          }
+        }
+
+        &:hover {
+          display: flex;
+          transition: all 2s;
         }
       }
     }
@@ -463,7 +503,7 @@ section {
       text-align: left;
 
       &__heading {
-        font-size: 60px;
+        font-size: 50px;
         line-height: 1.2;
         letter-spacing: 0;
         font-style: normal;
@@ -761,7 +801,8 @@ section {
         border-radius: 50px;
         overflow: hidden;
         margin-bottom: 30px;
-        background: $color-cian;
+        //background: $color-cian;
+        background: #02aeae50;
 
         img {
           width: 100%;
@@ -773,7 +814,7 @@ section {
 
       &:nth-child(odd) {
         .carousel-item__img {
-          background: #333;
+          //background: #333;
         }
       }
 
@@ -812,6 +853,56 @@ section {
     @include tablet-large {
       padding: 40px 0;
     }
+  }
+
+  //Partner Carousel Block
+  &.our-partners {
+
+    margin: 30px auto;
+
+    .heading {
+      font-size: 36px;
+      text-align: center;
+      font-weight: 700;
+    }
+    .delimiter {
+      width: 30%;
+      height: 4px;
+      background: $color-cian;
+      margin: 10px auto 35px;
+    }
+
+    .partners-carousel {
+      display: flex;
+      justify-content: space-between;
+      .carousel-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        //max-width: 300px;
+        .dark-bg {
+          background: #222222;
+
+          img {
+            width: auto;
+          }
+
+        }
+        img {
+          height: 80px;
+          padding: 10px;
+          object-fit: contain;
+          width: 100%;
+        }
+      }
+    }
+
+  }
+
+  //2Gis Map
+  &.gis-map {
+    //padding:0 20px;
   }
 
   //Mass Media Page
@@ -962,6 +1053,44 @@ section {
     }
   }
 
+  //  Footer
+  &.footer {
+    background: $color-cian;
+    padding: 30px 10px;
+    color: #fff;
+
+    .footer-inner {
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-end;
+    }
+
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+
+      li {
+        color: #fff;
+        margin-bottom: 5px;
+
+        a {
+          &:hover {
+            color: #222;
+            font-weight: bold;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+
+    .contact-info {
+      p {
+        margin-bottom: 5px;
+      }
+    }
+
+  }
+
 }
 
 //Modal Dialogs - Our Team more info
@@ -1042,7 +1171,8 @@ ul {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100%;
+        width: 100% !important;
+        background: transparent;
         padding: 0;
         position: relative;
         border: 0;
@@ -1057,6 +1187,7 @@ ul {
         }
 
         &:after {
+          display: none;
           position: absolute;
           content: ' ';
           width: 8px;
@@ -1069,12 +1200,23 @@ ul {
       &.slick-active {
         button {
           &:after {
-            display: none;
+            display: flex;
           }
         }
       }
     }
   }
+}
+
+//Request form popup
+.send-request {
+  width:400px;
+  margin: 0 auto;
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
 }
 
 @media screen and (max-width: 992px) {
